frontend solution and backend adjusts
