# task-management-backend/app/Http/Controllers/Controller.php
@@ -2,4 +2,16 @@
 
 namespace App\Http\Controllers;
 
-abstract class Controller {}
+abstract class Controller
+{
+    protected array $categories = [
+        ['id' => 1, 'name' => 'Analysis'],
+        ['id' => 2, 'name' => 'Development'],
+        ['id' => 3, 'name' => 'Maintenance']
+    ];
+
+    protected function getCategories(): array
+    {
+        return $this->categories;
+    }
+}
